# uneex_linux

./: .gitattributes  .gitignore  README.md
01_TerminalProject/: Makefile  Show.c  example.txt
02_Multifile/: Makefile  README.md
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_commands.txt  gdb_scenario_2.txt  range  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  my_unlink.c
07_Environmental/: CMakeLists.txt  README.md  clean.sh  rhasher.c
08_I18n/: Makefile.am  README.md  configure.ac  guess.c
08_I18n/po/: POTFILES.in  ru.po
09_PatchDiff/: Makefile  maze  maze.c  maze1.c.patch  maze2.c.patch  maze3.c.patch
10_LibTesting/: Makefile.am  README.md  configure.ac
10_LibTesting/src/: Makefile.am  grobuf.h  grobuf_const.h  libgrobuf.c
10_LibTesting/tests/: Makefile.am  upstream.ts
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  guess.c  roman_gen.py
11_Documenting/po/: ru.po
12_InstallPackaging/: Doxyfile.in  README.md  configure.ac
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: roman.h
12_InstallPackaging/tests/: roman.ts
12_InstallPackaging_1/: Makefile.am  configure.ac
12_InstallPackaging_1/src/: Makefile.am  guess.c  libroman.c  mainpage.dox  roman_gen.py
12_InstallPackaging_1/tests/: Makefile.am
